<resources>
    <string name="app_name">Birthday Notifier</string>
    <string name="test_app">Check birthdays</string>
    <string name="open_json">Change birthdays</string>
    <string name="settings">Settings</string>
    <string name="set_time">Set notification time</string>
    <string name="logout">Logout</string>
    <string name="add_birthday">Add Birthday</string>
    <string name="birthday_list_title">Birthdays</string>
    <string name="login">Login</string>
    <string name="linkedin">My LinkedIn</string>
    <string name="buy_me_coffee">Buy me a coffee</string>
    <string name="repo">This repository</string>
    <string name="no_birthdays">\uD83D\uDD6F No birthdays today</string>
    <string name="birthdays_today"><![CDATA[<b>Birthdays today:</b><br>%1$s<br>Check notifications<br>]]></string>
    <string name="birthday_today"><![CDATA[<b>Birthday today:</b><br>%1$s<br>Check notifications<br>]]></string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Espa\u00f1ol</string>
    <string name="portuguese">Portuguese</string>
    <string name="italian">Italian</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="auth_failed">Auth failed: %1$s</string>
    <string name="hint_name">Name</string>
    <string name="hint_date">Date (dd-mm)</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_message">Birthday greeting</string>
    <string name="import_contact">Import</string>
    <string name="filter_name">Filter name</string>
    <string-array name="sort_options">
        <item>Date asc</item>
        <item>Date desc</item>
        <item>Name asc</item>
        <item>Name desc</item>
    </string-array>
    <string name="edit_birthday">Edit Birthday</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="permission_required">Permission required to import contact</string>
    <string name="birthday_item">%1$s - %2$s</string>
    <string name="default_message">Happy birthday, %1$s! \uD83C\uDF89\uD83E\uDD73</string>
    <string name="notification_channel_name">Birthdays</string>
    <string name="notification_title">Birthday: %1$s</string>
    <string name="snooze_action">Snooze 1 hour</string>
    <string name="default_web_client_id">793109226456-n35uqu21dd5s3i3ggn57807tvlkrgio9.apps.googleusercontent.com</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_data_confirm">Delete all data?</string>
    <string name="delete_data_type_phrase"><![CDATA[Type:<br><b><u>"%1$s"</u></b><br>to confirm:<br>]]></string>
    <string name="delete_data_phrase">I confirm I want to delete my data</string>
    <string name="delete_data_done">All data deleted</string>
    <string name="delete_data_incorrect">Incorrect confirmation text</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="checking_birthdays">Checking…</string>
    <string name="manual_check">Manual Check</string>
    <string name="add_contact">Add Contact</string>
    <string name="calendar_icon_desc">Calendar icon</string>
    <string name="cake_icon_desc">Cake icon</string>
    <string name="soon">Soon...</string>
</resources>

