<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary">

        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_gravity="center"
            android:src="@drawable/ic_cake"
            android:contentDescription="@string/app_name"
            app:tint="@android:color/white" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSetTime"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="@string/set_time"
        style="?attr/materialButtonStyle"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="24dp"
        app:cornerRadius="0dp"
        app:rippleColor="?attr/colorPrimaryContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLanguage"
        style="?attr/materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/language"
        android:textColor="?attr/colorOnPrimary"
        app:cornerRadius="0dp"
        app:rippleColor="?attr/colorPrimaryContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTheme"
        style="?attr/materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/theme"
        android:textColor="?attr/colorOnPrimary"
        app:cornerRadius="0dp"
        app:rippleColor="?attr/colorPrimaryContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDeleteData"
        style="?attr/materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/delete_data"
        android:textColor="?attr/colorOnPrimary"
        app:cornerRadius="0dp"
        app:rippleColor="?attr/colorPrimaryContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        style="?attr/materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/logout"
        android:textColor="?attr/colorOnPrimary"
        app:cornerRadius="0dp"
        app:rippleColor="?attr/colorPrimaryContainer" />

</LinearLayout>

