<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primaryContainer">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary">

        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_gravity="center"
            android:src="@drawable/ic_cake"
            android:contentDescription="@string/app_name" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTest"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="@string/test_app"
        style="?attr/materialButtonStyle"
        android:backgroundTint="@color/md_theme_light_primary"
        android:textColor="@color/md_theme_light_onPrimary"
        android:layout_marginTop="24dp"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOpen"
        style="?attr/materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/md_theme_light_primary"
        android:text="@string/open_json"
        android:textColor="@color/md_theme_light_onPrimary"
        app:cornerRadius="0dp" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/md_theme_light_primary"
        android:textStyle="bold"
        android:textSize="24sp" />

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="32dp">

                <ImageButton
                        android:id="@+id/buttonLinkedin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:src="@drawable/ic_linkedin"
                        android:contentDescription="@string/linkedin" />

                <ImageButton
                        android:id="@+id/buttonCoffee"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:src="@drawable/ic_buymeacoffee"
                        android:contentDescription="@string/buy_me_coffee" />

                <ImageButton
                        android:id="@+id/buttonRepo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:src="@drawable/ic_github"
                        android:contentDescription="@string/repo" />

                <ImageButton
                        android:id="@+id/buttonSettingsIcon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:src="@drawable/ic_settings"
                        android:contentDescription="@string/settings" />

        </LinearLayout>

</LinearLayout>
